--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,43 +5,43 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-1.02MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇫🇷 法国-499.0KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.48MB/s(Youtube:不良林), server: rn.tianxie.jp.eu.org, port: 443, type: trojan, password: c06bb8e0-7989-4885-9560-df320b7ce1d3, sni: rn.tianxie.jp.eu.org, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.47MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.19MB/s(Youtube:不良林), server: 185.105.191.227, port: 443, type: vmess, uuid: 248c42c7-5328-46f6-8473-7a7e7c0b3c39, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /f1hUi8k, ws-headers: {Host: 185.105.191.227}}
+  - {name: 🇨🇦 加拿大-994.2KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.19MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-772.5KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.35MB/s(Youtube:不良林), server: az1.bgp.zhongzhuan1.xyz, port: 41535, type: trojan, password: 4d128058-ee75-4f03-8a4a-6d090586200b, sni: az1.bgp.zhongzhuan1.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.02MB/s(Youtube:不良林)
-      - 🇫🇷 法国-499.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-994.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-772.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-1.02MB/s(Youtube:不良林)
-      - 🇫🇷 法国-499.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-994.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-772.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.02MB/s(Youtube:不良林)
-      - 🇫🇷 法国-499.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-994.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-772.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -52,32 +52,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-1.02MB/s(Youtube:不良林)
-      - 🇫🇷 法国-499.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-994.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-772.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.02MB/s(Youtube:不良林)
-      - 🇫🇷 法国-499.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-994.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-772.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.02MB/s(Youtube:不良林)
-      - 🇫🇷 法国-499.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-994.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-772.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.02MB/s(Youtube:不良林)
-      - 🇫🇷 法国-499.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-994.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-772.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
