--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-482.5KB/s(Youtube:不良林), server: az1.bgp.zhongzhuan1.xyz, port: 22818, type: trojan, password: 4d128058-ee75-4f03-8a4a-6d090586200b, sni: az1.bgp.zhongzhuan1.xyz, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-292.1KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇫🇷 法国-1.30MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇦🇺 澳大利亚-939.6KB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
   - {name: 🇨🇦 加拿大-674.4KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.16MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.74MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.80MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.60MB/s(Youtube:不良林), server: jgwdb3.gaox.ml, port: 443, type: trojan, password: 8d2d5953-d649-4034-94f2-72f2df2623da, sni: jgwdb3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.36MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
   - {name: 🇬🇧 英国-746.2KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.36MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.73MB/s(Youtube:不良林), server: 36.139.154.17, port: 45413, type: vmess, uuid: 20f731db-9c56-451f-b926-4e33186dfcbc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 36.139.154.17}}
+  - {name: 🇺🇸 美国-1.91MB/s(Youtube:不良林), server: sgarm2.600519.xyz, port: 41375, type: vmess, uuid: 365e3f64-2d96-44e0-c853-c33a12a93a2d, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: sgarm2.600519.xyz}}
+  - {name: 🇻🇳 越南-301.4KB/s(Youtube:不良林), server: 123.31.41.42, port: 80, type: vmess, uuid: 0d89d3a3-17c0-4b8d-cdb6-a441207e1a38, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 123.31.41.42}}
+  - {name: 🇸🇬 新加坡-1.53MB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-590.7KB/s(Youtube:不良林), server: trojan-ctb-sg01.globalssh.xyz, port: 443, type: trojan, password: !<str> 123456, sni: trojan-ctb-sg01.globalssh.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-482.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-292.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.30MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-939.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-674.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
       - 🇬🇧 英国-746.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇻🇳 越南-301.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-590.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-482.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-292.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.30MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-939.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-674.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
       - 🇬🇧 英国-746.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇻🇳 越南-301.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-590.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-482.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-292.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.30MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-939.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-674.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
       - 🇬🇧 英国-746.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇻🇳 越南-301.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-590.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-482.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-292.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.30MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-939.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-674.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
       - 🇬🇧 英国-746.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇻🇳 越南-301.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-590.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-482.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-292.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.30MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-939.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-674.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
       - 🇬🇧 英国-746.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇻🇳 越南-301.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-590.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-482.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-292.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.30MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-939.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-674.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
       - 🇬🇧 英国-746.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇻🇳 越南-301.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-590.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-482.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-292.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.30MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-939.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-674.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
       - 🇬🇧 英国-746.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇻🇳 越南-301.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-590.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
